Make UI slightly darker, fix overlay container overlapping menu bar

--- a/app/style/index.less
+++ b/app/style/index.less
@@ -19,13 +19,13 @@ Styling for the main part of the app.
 	-webkit-app-region: drag;
 	align-self: stretch;
 	width: 100%;
-	height: 32px;
+	height: 40px;
 	flex: 0 0 auto;
 	align-self: stretch;
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
-	margin-top: 8px;
+	padding-top: 8px;
 	border-bottom: 1px solid @border1;
 }
 
